--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^24.3.0",
     "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.7",
@@ -27,6 +28,8 @@
   "dependencies": {
     "@tma.js/sdk-react": "^2.2.8",
     "axios": "^1.11.0",
+    "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
