--- a/server/package.json
+++ b/server/package.json
@@ -6,21 +6,29 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "seed:profiles": "ts-node prisma/seedProfiles.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
     "@fastify/cors": "^8.5.0",
+    "@fastify/multipart": "^6.0.1",
+    "@fastify/static": "^6.12.0",
     "@prisma/client": "5.15.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "fastify": "^4.27.0"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
-    "@types/node": "^20.12.12",
+    "@types/node": "^20.19.11",
     "prisma": "5.15.1",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   }
